<resources>
    <string name="app_name">Learn Dagger</string>
    <string name="cancel">Cancel</string>
    <string name="fire">Fire</string>
    <string name="dialog_fire_missiles">Fire Missiles</string>
</resources>
